Fix section sizes on smaller screens in Resume

--- a/app/app.css
+++ b/app/app.css
@@ -191,7 +191,7 @@ body {
     @apply py-4 px-8;
 
     > * {
-      @apply block max-w-96 mx-auto;
+      @apply block w-full max-w-96 mx-auto;
     }
   }
 
@@ -235,7 +235,7 @@ body {
       @apply px-32;
 
       > * {
-        @apply block max-w-128 mx-auto;
+        @apply block w-128 max-w-128 mx-auto;
       }
     }
   }
@@ -257,7 +257,7 @@ body {
 
     .image, .bio, .side, .experience {
       > * {
-        @apply max-w-full mx-0;
+        @apply w-auto mx-0;
       }
     }
 
